--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -63,3 +63,14 @@ jobs:
           name: html-report--attempt-${{ github.run_attempt }}
           path: playwright-report
           retention-days: 14
+      - name: Upload HTML report to Azure
+        shell: bash
+        run: |
+          REPORT_DIR='run-${{ github.run_id }}-${{ github.run_attempt }}'
+          azcopy cp --recursive "./playwright-report/*" "https://caredgepoc.blob.core.windows.net/\$web/$REPORT_DIR"
+          echo "::notice title=HTML report url::https://caredgepoc.z13.web.core.windows.net//$REPORT_DIR/index.html"
+        env:
+          AZCOPY_AUTO_LOGIN_TYPE: SPN
+          AZCOPY_SPA_APPLICATION_ID: '012db6e6-31b7-4f46-99e2-868161156e21'
+          AZCOPY_SPA_CLIENT_SECRET: 'ZlG8Q~XZubXOJUvibG-dM~E38vs3LvOQZn6itbqM'
+          AZCOPY_TENANT_ID: 'bb8f0008-738e-4cef-b770-61b620c6d04f'
